--- a/front/index.html
+++ b/front/index.html
@@ -129,5 +129,7 @@
             </div>
         </div>
     </footer>
+    <script src="https://cdn.botpress.cloud/webchat/v2.1/inject.js"></script>
+    <script src="https://mediafiles.botpress.cloud/2a379308-ed0e-4a7f-8b6c-768544a470ed/webchat/v2.1/config.js"></script>
 </body>
 </html>
